solc_ossfuzz_seed_corpus/test_sol/test_7152522ac701d0d06ed8982c8a83d79c4704299567073d7aed20fc3f9c2a92df_db9dd4d93542200c3320d90b5fb0a5aa70371a35_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  mapping(uint80 => address)   s0;
  bool immutable public s1 = true;
  constructor() payable  {
    s0[(((uint80((uint80(0) / (~(uint80(999865755560282775636415))))) | uint80(783045071830856781661891)) * uint80(309309618896741448476935)) + uint80(350805920121183704906412))] = address(this);
    {
      for(;
;
(int240(uint240(0)) ** uint128((((uint128(276339667661511719953254250930962569394) - uint128(340282366920938463463374607431768211455)) + uint128(0)) ^ uint128(340282366920938463463374607431768211455)))))
      {
      }
      for(      bytes("ffffffffffffffffffffffffffffffffffffffffffffffff0000000000000000000000");
;
)
      {
      }
      bool  l0 = s1;
      bool  l1 = l0;
      assert(l1 == s1);
      bool  l2 = s1;
      bool  l3 = l2;
      assert(l3 == s1);
    }
  }
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
// ----
// Warning 6133: (su0.sol:327-529): Statement has no effect.
// Warning 6133: (su0.sol:563-642): Statement has no effect.
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
